margin of search no longer covers logo

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,8 +33,6 @@ header {
 .search-div {
   display: flex;
   margin-top: 1rem;
-  margin-left: 25%;
-  width: 50%;
   padding-right: 10px;
 }
 #search-bar {
